CI + remove deprecated lib